welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:5: error: Invalid literal number
	return 4a
               ^