welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
	if ( a != b) {
		return (a+b);
	}
	return 4a
}
